@@ -1,3 +1,5 @@
+13-11-2004 Qball <Qball@qballcow.nl>
+	* src/playlist3.c:	Allow the playlist to be reordered
 10-11-2004 Qball <Qball@qballcow.nl>
 	* src/tray-icon.c:	Changed tooltip text markup
 05-11-2004 Qball <Qball@qballcow.nl>
